@@ -12,6 +12,8 @@ More detailed changelogs can be found at
         Upgrade Leaflet version to 1.1.0.
         Make sure HTTPS website links are truncated in same way as HTTP.
         Stop escaping commas in URLs in places that got missed last time.
+        Attempts to autocreate categories/locales with underscores in the name
+          will now see all underscores changed to spaces.
 
 0.82    05 June 2016
         Add some extra CSS hooks to the templates.  Add new base stylesheet
